--- a/Malaria_Detection_using_CNN.ipynb
+++ b/Malaria_Detection_using_CNN.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Malaria Detection using CNN.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     "accelerator": "TPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Amanjain781/Malaria-Detection-using-deep-learning/blob/master/Malaria_Detection_using_CNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
